--- a/spec/fixtures/vcr_cassettes/dois/doi/register_url_spaces.yml
+++ b/spec/fixtures/vcr_cassettes/dois/doi/register_url_spaces.yml
@@ -5,7 +5,7 @@ http_interactions:
     uri: https://api.test.datacite.org/dois/10.14454/05MB-Q396
     body:
       encoding: UTF-8
-      string: '{"data":{"type":"dois","attributes":{"url":"https://www.datacite.org/roadmap.html","event":"publish"},"relationships":{"client":{"data":{"type":"clients","id":"DATACITE.DATACITE"}}}}}'
+      string: '{"data":{"type":"dois","attributes":{"url":"https://www.datacite.org/roadmap.html","validate":"true","event":"publish"},"relationships":{"client":{"data":{"type":"clients","id":"DATACITE.DATACITE"}}}}}'
     headers:
       User-Agent:
       - Mozilla/5.0 (compatible; Maremma/4.0.12; +https://github.com/datacite/maremma)
@@ -17,36 +17,36 @@ http_interactions:
       - Basic <MDS_TOKEN>
   response:
     status:
-      code: 200
+      code: 201
       message: ''
     headers:
       Date:
-      - Fri, 20 Jul 2018 11:28:52 GMT
+      - Fri, 20 Jul 2018 11:51:03 GMT
       Content-Type:
       - application/vnd.api+json; charset=utf-8
       Connection:
       - keep-alive
       Status:
-      - 200 OK
+      - 201 Created
       Cache-Control:
       - max-age=0, private, must-revalidate
       Vary:
       - Accept-Encoding, Origin
-      Etag:
-      - W/"b34bfeba9cc33953ffc8556217cca1a6"
-      X-Runtime:
-      - '0.263081'
       X-Credential-Username:
       - datacite.datacite
       X-Request-Id:
-      - be0b4ad8-3a29-496f-a36b-3cf88c550ff6
+      - 35eddc56-dd62-4991-bd70-401bea130929
+      Etag:
+      - W/"209363a354313519652c1dfcc24a7d4c"
+      X-Runtime:
+      - '0.148194'
       X-Powered-By:
       - Phusion Passenger 5.3.3
       Server:
       - nginx/1.14.0 + Phusion Passenger 5.3.3
     body:
       encoding: ASCII-8BIT
-      string: '{"data":{"id":"10.14454/05mb-q396","type":"dois","attributes":{"doi":"10.14454/05mb-q396","prefix":"10.14454","suffix":"05mb-q396","identifier":"https://handle.test.datacite.org/10.14454/05mb-q396","url":"https://www.datacite.org/roadmap.html","author":[],"title":null,"publisher":null,"resource-type-subtype":null,"description":null,"version":null,"metadata-version":0,"schema-version":"http://datacite.org/schema/kernel-4","state":"findable","is-active":true,"reason":null,"landing-page":{"status":null,"content-type":null,"checked":null},"xml":null,"published":null,"created":"2018-07-19T19:25:28.000Z","registered":null,"updated":"2018-07-20T11:28:51.000Z"},"relationships":{"client":{"meta":{}},"provider":{"meta":{}},"resource-type":{"meta":{}},"media":{"meta":{}}}}}'
+      string: '{"data":{"id":"10.14454/05mb-q396","type":"dois","attributes":{"doi":"10.14454/05mb-q396","prefix":"10.14454","suffix":"05mb-q396","identifier":"https://handle.test.datacite.org/10.14454/05mb-q396","url":"https://www.datacite.org/roadmap.html","author":[],"title":null,"publisher":null,"resource-type-subtype":null,"description":null,"version":null,"metadata-version":0,"schema-version":"http://datacite.org/schema/kernel-4","state":"draft","is-active":false,"reason":null,"landing-page":{"status":null,"content-type":null,"checked":null},"xml":null,"published":null,"created":"2018-07-20T11:51:03.000Z","registered":null,"updated":"2018-07-20T11:51:03.000Z"},"relationships":{"client":{"meta":{}},"provider":{"meta":{}},"resource-type":{"meta":{}},"media":{"meta":{}}}}}'
     http_version: 
-  recorded_at: Fri, 20 Jul 2018 11:29:06 GMT
+  recorded_at: Fri, 20 Jul 2018 11:51:19 GMT
 recorded_with: VCR 3.0.3
