--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 rvm:
-- 2.4.1
+- 2.4.4
 sudo: required
 
 services:
@@ -13,6 +13,8 @@ addons:
 
 install:
   - travis_retry bundle install
+  - curl -sL https://sentry.io/get-cli/ | bash
+  - sentry-cli --version
 
 before_script:
   - memcached -p 11211 &
@@ -51,9 +53,16 @@ after_success:
       git clone "https://${TRAVIS_SECURE_TOKEN}@github.com/datacite/mastino.git";
       ./dockerize -template vendor/docker/_poodle.auto.tfvars.tmpl:mastino/stage/services/mds/_poodle.auto.tfvars;
 
+      sentry-cli releases new poodle:${GIT_TAG} --finalize --project poodle;
+
       if [ "${TRAVIS_TAG?}" ]; then
         ./dockerize -template vendor/docker/_poodle.auto.tfvars.tmpl:mastino/prod-eu-west/services/mds/_poodle.auto.tfvars;
+        sentry-cli releases deploys poodle:${GIT_TAG} new -e production;
+      else
+        sentry-cli releases deploys poodle:${GIT_TAG} new -e stage;
       fi
+
+      sentry-cli releases set-commits --auto poodle:${GIT_TAG};
 
       cd mastino;
       git remote;
