--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ after_success:
       export GIT_TAG=$(git describe --tags $(git rev-list --tags --max-count=1));
       git clone "https://${TRAVIS_SECURE_TOKEN}@github.com/datacite/mastino.git";
       ./dockerize -template vendor/docker/_poodle.auto.tfvars.tmpl:mastino/stage/services/mds/_poodle.auto.tfvars;
+      ./dockerize -template vendor/docker/_poodle.auto.tfvars.tmpl:mastino/test/services/mds/_poodle.auto.tfvars;
 
       sentry-cli releases new poodle:${GIT_TAG} --finalize --project poodle;
 
@@ -75,6 +76,7 @@ after_success:
         git push "https://${TRAVIS_SECURE_TOKEN}@github.com/datacite/mastino.git" master;
       else
         git add stage/services/mds/_poodle.auto.tfvars;
+        git add test/services/mds/_poodle.auto.tfvars;
         git commit -m "Adding poodle git variables for latest commit";
         git push "https://${TRAVIS_SECURE_TOKEN}@github.com/datacite/mastino.git" master;
       fi
