--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # Ignore bundler config.
 /.bundle
 
+vendor/bundle/*
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
@@ -31,3 +33,7 @@ coverage
 .env.*
 !.env.example
 !.env.travis
+
+
+# Ignore DevSpace cache and log folder
+.devspace/
