--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
           gem install bundler
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
-      - name: Lint and Test
+      - name: (Lint and) Test
         env:
           MEMCACHE_SERVERS: "localhost:11211"
         run: |
