--- a/.github/workflows/_update_terraform.yml
+++ b/.github/workflows/_update_terraform.yml
@@ -37,6 +37,8 @@ jobs:
         # use go template in terraform config repository to update git sha and tag
         # commit and push changes to trigger terraform workflow
         run: |
+          export GIT_SHA=${{ steps.extract_variables.outputs.GIT_SHA_SHORT }}
+          export GIT_TAG=${{ steps.extract_variables.outputs.GIT_TAG }}
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           wget https://github.com/jwilder/dockerize/releases/download/v0.6.0/dockerize-linux-amd64-v0.6.0.tar.gz
