--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,10 +22,10 @@ jobs:
       MDS_PASSWORD: ${{ secrets.MDS_PASSWORD }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Ruby 2.6
+      - name: Set up Ruby 3.1.4
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.6.9'
+          ruby-version: '3.1.4'
       - uses: actions/cache@v3
         with:
           path: vendor/bundle
@@ -36,7 +36,7 @@ jobs:
         env:
           MYSQL_PORT: ${{ job.services.mysql.ports[3306] }}
         run: |
-          gem install bundler
+          gem install bundler:2.5.6
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
       - name: (Lint and) Test
